# ai-agent-learn

./: .env.example  .gitignore  AUTHORING.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
docs/: README.md
docs/00-前言/: 00-序言与导读.md  01-为什么前端开发者适合转型agent.md  02-环境准备与工具链.md
docs/01-基础篇/: 01-从llm到agent.md  02-大语言模型基础.md  03-提示工程.md  04-结构化输出与函数调用.md
docs/02-核心能力篇/: 05-agent核心循环与推理范式.md  06-工具系统设计.md  07-记忆与上下文管理.md  08-rag检索增强生成.md  09-多agent协作系统.md
docs/03-工程篇/: 10-agent框架选型.md  11-mcp与工具生态.md  12-流式输出与前端集成.md  13-评测与测试.md  14-可观测性与调试.md  15-成本与性能优化.md  16-安全与防护.md  17-部署与生产化.md
docs/04-实战篇/: 项目1-智能知识库问答助手.md  项目2-自动化工具调用agent.md  项目3-多agent协作研究系统.md  项目4-全栈ai-agent产品.md
docs/05-面试篇/: 01-基础概念面试题.md  02-核心能力面试题.md  03-工程与系统设计面试题.md  04-项目经验与开放题.md
docs/06-附录/: 01-术语表.md  02-学习路线图.md  03-资源与工具清单.md
examples/ch01-what-is-agent/: README.md  index.ts  main.py
examples/ch02-llm-basics/: README.md  index.ts  main.py
examples/ch03-prompt-engineering/: README.md  index.ts  main.py
examples/ch04-structured-output/: README.md  index.ts  main.py
examples/ch04-tool-use/: README.md  index.ts  main.py
examples/ch05-agent-loop/: README.md  index.ts  main.py
examples/ch06-tool-system/: README.md  index.ts  main.py
examples/ch07-memory/: README.md  index.ts  main.py
examples/ch08-rag/: README.md  index.ts  main.py
examples/ch09-multi-agent/: README.md  index.ts  main.py
examples/ch10-mini-framework/: README.md  index.ts  (+1 more)
scripts/: build-pdf.mjs  real-smoke.py  real-smoke.ts  run-all.mjs
(+56 files in other folders)
